Wed Jan 21 16:01:26 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/digest/rmd160/extconf.rb: have_library appends found library.

Tue Jan 20 14:48:28 2004  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* ext/openssl/extconf.rb: should check <openssl/conf_api.h> instead
	  of OPENSSL_VERSION_NUMBER. [ruby-list:39056]

Tue Jan 20 14:43:17 2004  Dave Thomas  <dave@pragprog.com>

	* lib/base64.rb: Add RDoc

Tue Jan 20 14:25:51 2004  Dave Thomas  <dave@pragprog.com>

	* lib/abbrev.rb: Add RDoc

Tue Jan 20 13:22:39 2004  Dave Thomas  <dave@pragprog.com>

	* lib/rdoc/generators/html_generator.rb: Document aliases at
	  top-most level.

	* lib/English.rb: Document English.rb.

Tue Jan 20 04:41:58 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/ruby/test_marshal.rb (MarshalTestLib::test_exception): test
	  for [ruby-dev:22604].

	* test/ruby/test_marshal.rb (MarshalTestLibtest_singleton): test
	  for [ruby-dev:22588].

Tue Jan 20 02:49:22 2004  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* ext/openssl/extconf.rb: add check for OpenSSL version.
	  [ruby-list:39054]

Mon Jan 19 23:56:20 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* error.c (name_err_mesg_to_str): inverted condition for result of
	  inspection.  [ruby-dev:22628]

Mon Jan 19 22:24:28 2004  WATANABE Hirofumi  <eban@ruby-lang.org>

	* sample/exyacc.rb: escape '}' to avoid warning.

	* lib/rdoc/parsers/parse_c.rb: escape '{' and '}' to avoid warnings.

Mon Jan 19 21:28:06 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/digest/defs.h, win32/win3.c, win32/win32.h, file.c: remove
	  useless casts for Borland C.

Mon Jan 19 17:39:38 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* error.c (NameError::message): internal use only.

	* eval.c (rb_method_missing): use hidden constant.

Mon Jan 19 16:30:53 2004  akira yamada  <akira@ruby-lang.org>

	* test/ruby/test_time.rb: added tests for [ruby-dev:22614] and
	  [ruby-dev:22617].

Mon Jan 19 13:09:21 2004  NAKAMURA Usaku  <usa@ruby-lang.org>
